# maio-group-h-mlops

./: CHANGELOG.md  Dockerfile  README.md  modelling.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  release.yaml
app/: app.py
models/: model.pkl  poly_features.pkl  scaler.pkl  training_metrics.txt
tests/: test_training.py
