[project]
name = "maio-group-h-mlops"
version = "0.1.0"
description = "MAIO Assignment Group H"
authors = [
    {name = "langeandreas",email = "langeandreas5@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.3,<3.0.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "fastapi (>=0.118.3,<0.119.0)"
]

[dependency-groups]
dev = [
    "scikit-learn (>=1.7.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false